Feature/fikse refusjonsinfo (#2391)
* Enhetstest som sikrer at maxdato for refusjon blir satt riktig ved del opphør.
* Fikse datoFom på refusjonsinfo til første stønadsdag.
* Fikser refusjonsinfo156 for feriepenger utbetaling.